--- a/MusicPlayer.iOS/Info.plist
+++ b/MusicPlayer.iOS/Info.plist
@@ -2,12 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>gMusic beta</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.IIS.MusicPlayer.iOS</string>
 	<key>CFBundleName</key>
-	<string>gMusic Beta</string>
+	<string>Tunez</string>
 	<key>CFBundleShortVersionString</key>
 	<string>3.2</string>
 	<key>CFBundleURLTypes</key>
